# ReimbursementFullSolution-source

./: .gitignore  README.md
docs/: PROJECT_OVERVIEW.tex
downloaded_packages/: ConsensusArbitrationWorkflow.nupkg  FraudIntegrityAgent.nupkg  MirCaseClone.nupkg  NotificationAgent.nupkg  PolicyRuleCheckWorkflow.nupkg  ReceiptExtractor_XP.nupkg  ReimbursementClassificationAgent.nupkg  ReimbursementIntakeBot_XP.nupkg  RejectionNotificationAgent.nupkg  StripePayoutWorkflow.nupkg  SubmissionConfirmationAgent.nupkg
reimbursement-admin-dashboard/: .env.example  Dockerfile  README.md  admin.html  api.py  live_console.html  render.yaml  requirements.txt
reimbursement-admin-dashboard/consensus/: auth.py  debate.py  live_agents.py
reimbursement-intake-v2/: .env.example  .gitignore  Dockerfile  README.md  admin.html  api.py  dashboard.html  ledger.html  render.yaml  requirements.txt  review.html  uipath_auth.py
reimbursement-intake-v2/consensus/: adjudication.py  agents.py  boardroom.py  copilot.py  corroborate.py  debate.py  groq_client.py  ledger.py  live_agents.py  network.py  orchestrator.py  preview.py  reconcile.py  redteam.py  savings.py  vision.py  whatif.py
source/ConsensusArbitrationAgent/: agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
source/ConsensusArbitrationAgent/.agent/: CLI_REFERENCE.md  SDK_REFERENCE.md
source/FraudIntegrityAgent/content/: README.md  entry-points.json  main.py  operate.json  pyproject.toml
source/SubmissionConfirmationAgent/content/: entry-points.json  main.py  pyproject.toml  uipath.json
(+49 files in other folders)
