[project]
name = "FraudIntegrityAgent"
version = "0.0.1"
description = "AgentHack - reimbursement fraud / integrity screening (LangGraph agent)"
authors = [{ name = "Subharjun" }]
dependencies = [
    "uipath-langchain>=0.10.0, <0.11.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.79",
]
